@@ -1,4 +1,0 @@
-$Id$
-
-How to build it, is explained in INSTALL.
-How building RPMs works, will be explained here.
